# simmersmith

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HANDOFF.md  LICENSE  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
.docs/ai/: current-state.md  decisions.md  handoff-template.md  mcp-tools.md  next-steps.md  roadmap.md
SimmerSmith/: ExportOptions.plist  ExportOptionsManual.plist  project.yml
SimmerSmithBallastAdapter/: Package.swift
SimmerSmithCloudKit/: Package.swift  README.md
SimmerSmithKit/: Package.swift
admin/: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  wrangler.toml
admin/src/: app.css  (+2 more)
alembic/: env.py
app/: __init__.py  auth.py  config.py  db.py  main.py  mcp_server.py  models.py  schemas.py
docs/: index.html  site.css
frontend/: components.json  index.html  package-lock.json  package.json  vite.config.ts
scripts/: codex_mcp_http_bridge.py  dev-sim.sh  release-ios.sh  rewrite_product_like_catalog.py  run_simmersmith_mcp.py  seed_ingredient_catalog.py  simmersmith_cli.py  test-release-ios-poll.sh
skills/simmersmith-shopping/: .gitignore  README.md  SKILL.md  pyproject.toml  setup.sh
skills/simmersmith-shopping/src/simmersmith_shopping/: __init__.py  __main__.py  cli.py  parser.py  reminders.py  splitter.py
skills/simmersmith-shopping/src/simmersmith_shopping/stores/: __init__.py  aldi.py  base.py  instacart.py  sams_club.py  walmart.py
skills/simmersmith-shopping/tests/: test_parser.py  test_reminders.py  test_splitter.py
tests/: conftest.py  fixture_loader.py  test_admin_endpoints.py  test_api.py  test_assistant_anthropic_tools.py  test_assistant_proposed_change.py  test_assistant_tools.py  test_auth_concurrency.py  test_auth_email_verified.py  test_batch_assistant_ai.py  test_batch_billing.py  test_batch_catalog.py  test_batch_idor.py  test_batch_import_vision.py  test_batch_pantry.py  test_batch_planner.py  test_batch_pricing_rebalance.py  test_batch_push.py  test_batch_recipes.py  test_batch_sso.py  test_catalog_scoping.py  test_entitlements.py  test_event_meal_recipe.py  test_event_supplements.py  test_events_api.py  test_grocery.py  test_grocery_edits.py  test_household_api.py  test_household_member_ops.py  test_image_usage.py  test_ingredient_governance.py  test_ingredient_idor.py  test_ingredient_ingest.py  test_isolation.py  test_kroger.py  test_macro_enrichment.py  test_mcp_helpers.py  test_mcp_tools.py  test_oauth.py  test_pairings_api.py  (+32 more)
(+785 files in other folders)
