[build-system]
requires = ["setuptools>=75.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simmersmith"
version = "0.1.0"
description = "AI-first local meal planning app with React, FastAPI, SQLite, and imported retailer pricing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.1",
  "fastapi>=0.115.12,<0.123.5",
  "httpx>=0.28.1",
  "pydantic-settings>=2.8.1",
  "sqlalchemy>=2.0.39",
  "uvicorn>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
include = ["app*"]
