[project]
name = "simmersmith-shopping"
version = "0.1.0"
description = "Local skill that drives Aldi/Walmart/Sam's Club/Instacart carts from a SimmerSmith grocery list."
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.45",
    "httpx>=0.27",
    "pydantic>=2.7",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

# Reminders are read via osascript by default — works on every Mac
# without extra deps. PyXA is a faster path, but its PyPI release is
# stale; users who want it can `uv pip install mac-pyxa` after setup
# and the runtime will pick it up automatically.

[project.scripts]
simmersmith-shopping = "simmersmith_shopping.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
